@@ -20,7 +20,7 @@
  *
  * @author Bernd Schönbach <bernd@oliverklee.de>
  */
-class tx_seminars_Model_BackEndUser extends tx_oelib_Model_BackEndUser {
+class tx_seminars_Model_BackEndUser extends Tx_Oelib_Model_BackEndUser {
 	/**
 	 * Returns the PID for newly created event records.
 	 *
